@@ -158,8 +158,7 @@ namespace libtorrent
 			"invalid lt_tracker message",
 			"",
 			"",
-			"",
-			"",
+			"invalid dont-have message",
 			"",
 			"",
 			"",
